--- a/python/intro_to_deep_learning/code_for_demos.ipynb
+++ b/python/intro_to_deep_learning/code_for_demos.ipynb
@@ -22,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -144,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -341,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -398,40 +392,38 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "534/534 [==============================] - 0s - loss: 70.0865     \n",
+      "534/534 [==============================] - 0s - loss: 41.9209     \n",
       "Epoch 2/10\n",
-      "534/534 [==============================] - 0s - loss: 26.9606     \n",
+      "534/534 [==============================] - 0s - loss: 24.6938     \n",
       "Epoch 3/10\n",
-      "534/534 [==============================] - 0s - loss: 22.5278     \n",
+      "534/534 [==============================] - 0s - loss: 22.1684     \n",
       "Epoch 4/10\n",
-      "534/534 [==============================] - 0s - loss: 21.6223     \n",
+      "534/534 [==============================] - 0s - loss: 21.7132     \n",
       "Epoch 5/10\n",
-      "534/534 [==============================] - 0s - loss: 21.7286     \n",
+      "534/534 [==============================] - 0s - loss: 21.4614     \n",
       "Epoch 6/10\n",
-      "534/534 [==============================] - 0s - loss: 22.1453     \n",
+      "534/534 [==============================] - 0s - loss: 21.5101     \n",
       "Epoch 7/10\n",
-      "534/534 [==============================] - 0s - loss: 21.0051     \n",
+      "534/534 [==============================] - 0s - loss: 22.1215     \n",
       "Epoch 8/10\n",
-      "534/534 [==============================] - 0s - loss: 21.1930     \n",
+      "534/534 [==============================] - 0s - loss: 21.4103     \n",
       "Epoch 9/10\n",
-      "534/534 [==============================] - 0s - loss: 21.3519     \n",
+      "534/534 [==============================] - 0s - loss: 20.9040     \n",
       "Epoch 10/10\n",
-      "534/534 [==============================] - 0s - loss: 21.6887     \n"
+      "534/534 [==============================] - 0s - loss: 21.4513     \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x118170cf8>"
+       "<keras.callbacks.History at 0x10edd2d68>"
       ]
      },
      "execution_count": 8,
@@ -453,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -463,31 +453,31 @@
      "text": [
       "Train on 373 samples, validate on 161 samples\n",
       "Epoch 1/10\n",
-      "373/373 [==============================] - 0s - loss: 49.8994 - val_loss: 34.6380\n",
+      "373/373 [==============================] - 0s - loss: 27.7717 - val_loss: 29.5526\n",
       "Epoch 2/10\n",
-      "373/373 [==============================] - 0s - loss: 28.0559 - val_loss: 30.1449\n",
+      "373/373 [==============================] - 0s - loss: 21.3942 - val_loss: 25.5952\n",
       "Epoch 3/10\n",
-      "373/373 [==============================] - 0s - loss: 22.5016 - val_loss: 28.7867\n",
+      "373/373 [==============================] - 0s - loss: 20.7122 - val_loss: 25.8367\n",
       "Epoch 4/10\n",
-      "373/373 [==============================] - 0s - loss: 20.4312 - val_loss: 24.9016\n",
+      "373/373 [==============================] - 0s - loss: 19.8891 - val_loss: 26.8922\n",
       "Epoch 5/10\n",
-      "373/373 [==============================] - 0s - loss: 19.7778 - val_loss: 25.6970\n",
+      "373/373 [==============================] - 0s - loss: 20.6145 - val_loss: 26.0226\n",
       "Epoch 6/10\n",
-      "373/373 [==============================] - 0s - loss: 19.5629 - val_loss: 25.0543\n",
+      "373/373 [==============================] - 0s - loss: 19.9552 - val_loss: 26.4241\n",
       "Epoch 7/10\n",
-      "373/373 [==============================] - 0s - loss: 19.8188 - val_loss: 25.2674\n",
+      "373/373 [==============================] - 0s - loss: 19.6835 - val_loss: 25.2879\n",
       "Epoch 8/10\n",
-      "373/373 [==============================] - 0s - loss: 19.4770 - val_loss: 25.2308\n",
+      "373/373 [==============================] - 0s - loss: 19.7916 - val_loss: 27.0577\n",
       "Epoch 9/10\n",
-      "373/373 [==============================] - 0s - loss: 19.4184 - val_loss: 25.6940\n",
+      "373/373 [==============================] - 0s - loss: 19.4977 - val_loss: 25.9578\n",
       "Epoch 10/10\n",
-      "373/373 [==============================] - 0s - loss: 19.3741 - val_loss: 25.4255\n"
+      "373/373 [==============================] - 0s - loss: 19.5414 - val_loss: 25.1722\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1189d2828>"
+       "<keras.callbacks.History at 0x10f822588>"
       ]
      },
      "execution_count": 9,
@@ -510,9 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -520,33 +508,31 @@
      "text": [
       "Train on 373 samples, validate on 161 samples\n",
       "Epoch 1/20\n",
-      "373/373 [==============================] - 0s - loss: 57.9855 - val_loss: 37.6224\n",
+      "373/373 [==============================] - 0s - loss: 54.0785 - val_loss: 38.2917\n",
       "Epoch 2/20\n",
-      "373/373 [==============================] - 0s - loss: 27.6005 - val_loss: 35.2617\n",
+      "373/373 [==============================] - 0s - loss: 28.4048 - val_loss: 35.8080\n",
       "Epoch 3/20\n",
-      "373/373 [==============================] - 0s - loss: 22.1495 - val_loss: 26.1218\n",
+      "373/373 [==============================] - 0s - loss: 22.6573 - val_loss: 28.9026\n",
       "Epoch 4/20\n",
-      "373/373 [==============================] - 0s - loss: 20.6510 - val_loss: 25.7686\n",
+      "373/373 [==============================] - 0s - loss: 21.1632 - val_loss: 28.6726\n",
       "Epoch 5/20\n",
-      "373/373 [==============================] - 0s - loss: 20.2414 - val_loss: 25.6822\n",
+      "373/373 [==============================] - 0s - loss: 20.8502 - val_loss: 25.6186\n",
       "Epoch 6/20\n",
-      "373/373 [==============================] - 0s - loss: 19.9175 - val_loss: 25.4558\n",
+      "373/373 [==============================] - 0s - loss: 20.7640 - val_loss: 26.9110\n",
       "Epoch 7/20\n",
-      "373/373 [==============================] - 0s - loss: 19.8169 - val_loss: 25.9288\n",
+      "373/373 [==============================] - 0s - loss: 19.8842 - val_loss: 25.5670\n",
       "Epoch 8/20\n",
-      "373/373 [==============================] - 0s - loss: 19.6836 - val_loss: 25.4549\n",
+      "373/373 [==============================] - 0s - loss: 20.0095 - val_loss: 25.6803\n",
       "Epoch 9/20\n",
-      "373/373 [==============================] - 0s - loss: 19.4733 - val_loss: 26.3522\n",
+      "373/373 [==============================] - 0s - loss: 20.0967 - val_loss: 25.7742\n",
       "Epoch 10/20\n",
-      "373/373 [==============================] - 0s - loss: 19.9091 - val_loss: 27.3344\n",
-      "Epoch 11/20\n",
-      "373/373 [==============================] - 0s - loss: 19.5699 - val_loss: 26.2675\n"
+      "373/373 [==============================] - 0s - loss: 20.2237 - val_loss: 28.2252\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x118fdad68>"
+       "<keras.callbacks.History at 0x10fcf5c88>"
       ]
      },
      "execution_count": 10,
@@ -572,9 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -708,9 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -718,31 +700,29 @@
      "text": [
       "Train on 623 samples, validate on 268 samples\n",
       "Epoch 1/20\n",
-      "623/623 [==============================] - 0s - loss: 0.7890 - acc: 0.6100 - val_loss: 0.7363 - val_acc: 0.6679\n",
+      "623/623 [==============================] - 0s - loss: 0.9078 - acc: 0.6292 - val_loss: 1.0715 - val_acc: 0.3172\n",
       "Epoch 2/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6979 - acc: 0.6421 - val_loss: 0.5570 - val_acc: 0.7313\n",
+      "623/623 [==============================] - 0s - loss: 0.7510 - acc: 0.6260 - val_loss: 0.7240 - val_acc: 0.6418\n",
       "Epoch 3/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6467 - acc: 0.6934 - val_loss: 0.5769 - val_acc: 0.6754\n",
+      "623/623 [==============================] - 0s - loss: 0.7417 - acc: 0.6100 - val_loss: 0.5218 - val_acc: 0.7612\n",
       "Epoch 4/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6333 - acc: 0.6693 - val_loss: 0.5371 - val_acc: 0.7425\n",
+      "623/623 [==============================] - 0s - loss: 0.6472 - acc: 0.6774 - val_loss: 0.6074 - val_acc: 0.6679\n",
       "Epoch 5/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5902 - acc: 0.6886 - val_loss: 0.4926 - val_acc: 0.7425\n",
+      "623/623 [==============================] - 0s - loss: 0.6201 - acc: 0.6870 - val_loss: 0.5347 - val_acc: 0.7201\n",
       "Epoch 6/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5878 - acc: 0.6902 - val_loss: 0.5084 - val_acc: 0.7425\n",
+      "623/623 [==============================] - 0s - loss: 0.6234 - acc: 0.6485 - val_loss: 0.5031 - val_acc: 0.7649\n",
       "Epoch 7/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5719 - acc: 0.7175 - val_loss: 0.4732 - val_acc: 0.7649\n",
+      "623/623 [==============================] - 0s - loss: 0.6453 - acc: 0.6838 - val_loss: 0.5100 - val_acc: 0.7463\n",
       "Epoch 8/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5835 - acc: 0.7127 - val_loss: 0.5240 - val_acc: 0.7313\n",
+      "623/623 [==============================] - 0s - loss: 0.5963 - acc: 0.6998 - val_loss: 0.5087 - val_acc: 0.7276\n",
       "Epoch 9/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5922 - acc: 0.7319 - val_loss: 0.4788 - val_acc: 0.7910\n",
-      "Epoch 10/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5595 - acc: 0.7335 - val_loss: 0.5214 - val_acc: 0.7649\n"
+      "623/623 [==============================] - 0s - loss: 0.6401 - acc: 0.6774 - val_loss: 0.6491 - val_acc: 0.7425\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x11a025d68>"
+       "<keras.callbacks.History at 0x11049fd30>"
       ]
      },
      "execution_count": 12,
@@ -780,9 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -827,9 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -886,10 +862,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -898,14 +872,20 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "flatten_2 (Flatten)              (None, 8192)          0           flatten_input_1[0][0]            \n",
+      "convolution2d_1 (Convolution2D)  (None, 27, 27, 8)     40          convolution2d_input_1[0][0]      \n",
       "____________________________________________________________________________________________________\n",
-      "dense_16 (Dense)                 (None, 256)           2097408     flatten_2[0][0]                  \n",
+      "convolution2d_2 (Convolution2D)  (None, 26, 26, 8)     264         convolution2d_1[0][0]            \n",
       "____________________________________________________________________________________________________\n",
-      "dense_17 (Dense)                 (None, 1)             257         dense_16[0][0]                   \n",
+      "maxpooling2d_1 (MaxPooling2D)    (None, 13, 13, 8)     0           convolution2d_2[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "flatten_1 (Flatten)              (None, 1352)          0           maxpooling2d_1[0][0]             \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_14 (Dense)                 (None, 100)           135300      flatten_1[0][0]                  \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_15 (Dense)                 (None, 10)            1010        dense_14[0][0]                   \n",
       "====================================================================================================\n",
-      "Total params: 2,097,665\n",
-      "Trainable params: 2,097,665\n",
+      "Total params: 136,614\n",
+      "Trainable params: 136,614\n",
       "Non-trainable params: 0\n",
       "____________________________________________________________________________________________________\n"
      ]
@@ -917,10 +897,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -928,24 +906,24 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 78s - loss: 0.2321 - acc: 0.9319 - val_loss: 0.0895 - val_acc: 0.9724\n",
+      "60000/60000 [==============================] - 37s - loss: 0.2287 - acc: 0.9316 - val_loss: 0.0946 - val_acc: 0.9679\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 79s - loss: 0.0782 - acc: 0.9759 - val_loss: 0.0652 - val_acc: 0.9784\n",
+      "60000/60000 [==============================] - 30s - loss: 0.0773 - acc: 0.9766 - val_loss: 0.0641 - val_acc: 0.9794\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 79s - loss: 0.0529 - acc: 0.9834 - val_loss: 0.0489 - val_acc: 0.9827\n",
+      "60000/60000 [==============================] - 30s - loss: 0.0486 - acc: 0.9850 - val_loss: 0.0651 - val_acc: 0.9780\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 78s - loss: 0.0394 - acc: 0.9876 - val_loss: 0.0517 - val_acc: 0.9840\n",
+      "60000/60000 [==============================] - 29s - loss: 0.0345 - acc: 0.9893 - val_loss: 0.0589 - val_acc: 0.9817\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 78s - loss: 0.0309 - acc: 0.9903 - val_loss: 0.0513 - val_acc: 0.9827\n"
+      "60000/60000 [==============================] - 28s - loss: 0.0240 - acc: 0.9923 - val_loss: 0.0522 - val_acc: 0.9850\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x11e78c940>"
+       "<keras.callbacks.History at 0x12016cda0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,9 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -988,9 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1058,9 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -1087,9 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1141,9 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1244,9 +1212,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
