Committing last status of training notebooks.

--- a/python/intro_to_deep_learning/code_for_demos.ipynb
+++ b/python/intro_to_deep_learning/code_for_demos.ipynb
@@ -399,31 +399,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "534/534 [==============================] - 0s - loss: 41.9209     \n",
+      "534/534 [==============================] - 0s - loss: 43.5665      \n",
       "Epoch 2/10\n",
-      "534/534 [==============================] - 0s - loss: 24.6938     \n",
+      "534/534 [==============================] - 0s - loss: 25.2800     \n",
       "Epoch 3/10\n",
-      "534/534 [==============================] - 0s - loss: 22.1684     \n",
+      "534/534 [==============================] - 0s - loss: 22.8729     \n",
       "Epoch 4/10\n",
-      "534/534 [==============================] - 0s - loss: 21.7132     \n",
+      "534/534 [==============================] - 0s - loss: 21.6837     \n",
       "Epoch 5/10\n",
-      "534/534 [==============================] - 0s - loss: 21.4614     \n",
+      "534/534 [==============================] - 0s - loss: 21.2656     \n",
       "Epoch 6/10\n",
-      "534/534 [==============================] - 0s - loss: 21.5101     \n",
+      "534/534 [==============================] - 0s - loss: 21.2011     \n",
       "Epoch 7/10\n",
-      "534/534 [==============================] - 0s - loss: 22.1215     \n",
+      "534/534 [==============================] - 0s - loss: 20.7983     \n",
       "Epoch 8/10\n",
-      "534/534 [==============================] - 0s - loss: 21.4103     \n",
+      "534/534 [==============================] - 0s - loss: 20.5152     \n",
       "Epoch 9/10\n",
-      "534/534 [==============================] - 0s - loss: 20.9040     \n",
+      "534/534 [==============================] - 0s - loss: 20.8590     \n",
       "Epoch 10/10\n",
-      "534/534 [==============================] - 0s - loss: 21.4513     \n"
+      "534/534 [==============================] - 0s - loss: 20.4534     \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x10edd2d68>"
+       "<keras.callbacks.History at 0x112183320>"
       ]
      },
      "execution_count": 8,
@@ -453,31 +453,31 @@
      "text": [
       "Train on 373 samples, validate on 161 samples\n",
       "Epoch 1/10\n",
-      "373/373 [==============================] - 0s - loss: 27.7717 - val_loss: 29.5526\n",
+      "373/373 [==============================] - 0s - loss: 60.3477 - val_loss: 31.9766\n",
       "Epoch 2/10\n",
-      "373/373 [==============================] - 0s - loss: 21.3942 - val_loss: 25.5952\n",
+      "373/373 [==============================] - 0s - loss: 28.5516 - val_loss: 28.5031\n",
       "Epoch 3/10\n",
-      "373/373 [==============================] - 0s - loss: 20.7122 - val_loss: 25.8367\n",
+      "373/373 [==============================] - 0s - loss: 22.2078 - val_loss: 29.9883\n",
       "Epoch 4/10\n",
-      "373/373 [==============================] - 0s - loss: 19.8891 - val_loss: 26.8922\n",
+      "373/373 [==============================] - 0s - loss: 20.6673 - val_loss: 26.2656\n",
       "Epoch 5/10\n",
-      "373/373 [==============================] - 0s - loss: 20.6145 - val_loss: 26.0226\n",
+      "373/373 [==============================] - 0s - loss: 20.5883 - val_loss: 26.3882\n",
       "Epoch 6/10\n",
-      "373/373 [==============================] - 0s - loss: 19.9552 - val_loss: 26.4241\n",
+      "373/373 [==============================] - 0s - loss: 20.0573 - val_loss: 25.9773\n",
       "Epoch 7/10\n",
-      "373/373 [==============================] - 0s - loss: 19.6835 - val_loss: 25.2879\n",
+      "373/373 [==============================] - 0s - loss: 20.1561 - val_loss: 25.3687\n",
       "Epoch 8/10\n",
-      "373/373 [==============================] - 0s - loss: 19.7916 - val_loss: 27.0577\n",
+      "373/373 [==============================] - 0s - loss: 19.8547 - val_loss: 25.8602\n",
       "Epoch 9/10\n",
-      "373/373 [==============================] - 0s - loss: 19.4977 - val_loss: 25.9578\n",
+      "373/373 [==============================] - 0s - loss: 19.5880 - val_loss: 25.4065\n",
       "Epoch 10/10\n",
-      "373/373 [==============================] - 0s - loss: 19.5414 - val_loss: 25.1722\n"
+      "373/373 [==============================] - 0s - loss: 19.6009 - val_loss: 25.9103\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x10f822588>"
+       "<keras.callbacks.History at 0x112fca668>"
       ]
      },
      "execution_count": 9,
@@ -508,31 +508,43 @@
      "text": [
       "Train on 373 samples, validate on 161 samples\n",
       "Epoch 1/20\n",
-      "373/373 [==============================] - 0s - loss: 54.0785 - val_loss: 38.2917\n",
+      "373/373 [==============================] - 0s - loss: 41.2023 - val_loss: 32.1015\n",
       "Epoch 2/20\n",
-      "373/373 [==============================] - 0s - loss: 28.4048 - val_loss: 35.8080\n",
+      "373/373 [==============================] - 0s - loss: 24.8681 - val_loss: 33.5847\n",
       "Epoch 3/20\n",
-      "373/373 [==============================] - 0s - loss: 22.6573 - val_loss: 28.9026\n",
+      "373/373 [==============================] - 0s - loss: 21.0338 - val_loss: 25.6946\n",
       "Epoch 4/20\n",
-      "373/373 [==============================] - 0s - loss: 21.1632 - val_loss: 28.6726\n",
+      "373/373 [==============================] - 0s - loss: 20.1445 - val_loss: 26.6851\n",
       "Epoch 5/20\n",
-      "373/373 [==============================] - 0s - loss: 20.8502 - val_loss: 25.6186\n",
+      "373/373 [==============================] - 0s - loss: 20.2102 - val_loss: 25.2051\n",
       "Epoch 6/20\n",
-      "373/373 [==============================] - 0s - loss: 20.7640 - val_loss: 26.9110\n",
+      "373/373 [==============================] - 0s - loss: 19.9060 - val_loss: 25.3702\n",
       "Epoch 7/20\n",
-      "373/373 [==============================] - 0s - loss: 19.8842 - val_loss: 25.5670\n",
+      "373/373 [==============================] - 0s - loss: 19.7452 - val_loss: 25.1899\n",
       "Epoch 8/20\n",
-      "373/373 [==============================] - 0s - loss: 20.0095 - val_loss: 25.6803\n",
+      "373/373 [==============================] - 0s - loss: 20.0084 - val_loss: 26.5486\n",
       "Epoch 9/20\n",
-      "373/373 [==============================] - 0s - loss: 20.0967 - val_loss: 25.7742\n",
+      "373/373 [==============================] - 0s - loss: 19.5363 - val_loss: 25.7790\n",
       "Epoch 10/20\n",
-      "373/373 [==============================] - 0s - loss: 20.2237 - val_loss: 28.2252\n"
+      "373/373 [==============================] - 0s - loss: 19.2358 - val_loss: 24.7555\n",
+      "Epoch 11/20\n",
+      "373/373 [==============================] - 0s - loss: 19.2690 - val_loss: 25.1972\n",
+      "Epoch 12/20\n",
+      "373/373 [==============================] - 0s - loss: 19.0693 - val_loss: 25.3915\n",
+      "Epoch 13/20\n",
+      "373/373 [==============================] - 0s - loss: 18.9899 - val_loss: 24.4226\n",
+      "Epoch 14/20\n",
+      "373/373 [==============================] - 0s - loss: 18.8184 - val_loss: 26.1210\n",
+      "Epoch 15/20\n",
+      "373/373 [==============================] - 0s - loss: 19.7408 - val_loss: 24.6156\n",
+      "Epoch 16/20\n",
+      "373/373 [==============================] - 0s - loss: 19.3905 - val_loss: 24.5138\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x10fcf5c88>"
+       "<keras.callbacks.History at 0x113520f28>"
       ]
      },
      "execution_count": 10,
@@ -700,29 +712,21 @@
      "text": [
       "Train on 623 samples, validate on 268 samples\n",
       "Epoch 1/20\n",
-      "623/623 [==============================] - 0s - loss: 0.9078 - acc: 0.6292 - val_loss: 1.0715 - val_acc: 0.3172\n",
+      "623/623 [==============================] - 0s - loss: 0.9786 - acc: 0.6308 - val_loss: 0.8166 - val_acc: 0.6418\n",
       "Epoch 2/20\n",
-      "623/623 [==============================] - 0s - loss: 0.7510 - acc: 0.6260 - val_loss: 0.7240 - val_acc: 0.6418\n",
+      "623/623 [==============================] - 0s - loss: 0.6796 - acc: 0.6340 - val_loss: 0.5363 - val_acc: 0.7463\n",
       "Epoch 3/20\n",
-      "623/623 [==============================] - 0s - loss: 0.7417 - acc: 0.6100 - val_loss: 0.5218 - val_acc: 0.7612\n",
+      "623/623 [==============================] - 0s - loss: 0.6420 - acc: 0.6742 - val_loss: 0.5910 - val_acc: 0.7090\n",
       "Epoch 4/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6472 - acc: 0.6774 - val_loss: 0.6074 - val_acc: 0.6679\n",
+      "623/623 [==============================] - 0s - loss: 0.5953 - acc: 0.6966 - val_loss: 0.6522 - val_acc: 0.7052\n",
       "Epoch 5/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6201 - acc: 0.6870 - val_loss: 0.5347 - val_acc: 0.7201\n",
-      "Epoch 6/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6234 - acc: 0.6485 - val_loss: 0.5031 - val_acc: 0.7649\n",
-      "Epoch 7/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6453 - acc: 0.6838 - val_loss: 0.5100 - val_acc: 0.7463\n",
-      "Epoch 8/20\n",
-      "623/623 [==============================] - 0s - loss: 0.5963 - acc: 0.6998 - val_loss: 0.5087 - val_acc: 0.7276\n",
-      "Epoch 9/20\n",
-      "623/623 [==============================] - 0s - loss: 0.6401 - acc: 0.6774 - val_loss: 0.6491 - val_acc: 0.7425\n"
+      "623/623 [==============================] - 0s - loss: 0.6186 - acc: 0.6838 - val_loss: 0.6211 - val_acc: 0.7201\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x11049fd30>"
+       "<keras.callbacks.History at 0x113c48d30>"
       ]
      },
      "execution_count": 12,
@@ -906,21 +910,21 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 37s - loss: 0.2287 - acc: 0.9316 - val_loss: 0.0946 - val_acc: 0.9679\n",
+      "60000/60000 [==============================] - 19s - loss: 0.2117 - acc: 0.9382 - val_loss: 0.0782 - val_acc: 0.9754\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 30s - loss: 0.0773 - acc: 0.9766 - val_loss: 0.0641 - val_acc: 0.9794\n",
+      "60000/60000 [==============================] - 18s - loss: 0.0669 - acc: 0.9789 - val_loss: 0.0546 - val_acc: 0.9825\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 30s - loss: 0.0486 - acc: 0.9850 - val_loss: 0.0651 - val_acc: 0.9780\n",
+      "60000/60000 [==============================] - 18s - loss: 0.0439 - acc: 0.9860 - val_loss: 0.0504 - val_acc: 0.9840\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 29s - loss: 0.0345 - acc: 0.9893 - val_loss: 0.0589 - val_acc: 0.9817\n",
+      "60000/60000 [==============================] - 18s - loss: 0.0323 - acc: 0.9899 - val_loss: 0.0463 - val_acc: 0.9858\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 28s - loss: 0.0240 - acc: 0.9923 - val_loss: 0.0522 - val_acc: 0.9850\n"
+      "60000/60000 [==============================] - 18s - loss: 0.0242 - acc: 0.9920 - val_loss: 0.0521 - val_acc: 0.9842\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x12016cda0>"
+       "<keras.callbacks.History at 0x12386afd0>"
       ]
      },
      "execution_count": 16,
@@ -942,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1036,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -1058,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1110,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1119,54 +1125,54 @@
      "text": [
       "Train on 80 samples, validate on 20 samples\n",
       "Epoch 1/20\n",
-      "80/80 [==============================] - 0s - loss: 1.5143 - acc: 0.5000 - val_loss: 2.1882 - val_acc: 0.5000\n",
+      "80/80 [==============================] - 0s - loss: 1.4616 - acc: 0.5250 - val_loss: 0.6621 - val_acc: 0.6500\n",
       "Epoch 2/20\n",
-      "80/80 [==============================] - 0s - loss: 1.5431 - acc: 0.5875 - val_loss: 0.6620 - val_acc: 0.6500\n",
+      "80/80 [==============================] - 0s - loss: 0.4685 - acc: 0.7250 - val_loss: 0.8102 - val_acc: 0.6000\n",
       "Epoch 3/20\n",
-      "80/80 [==============================] - 0s - loss: 0.4394 - acc: 0.7250 - val_loss: 0.9542 - val_acc: 0.5500\n",
+      "80/80 [==============================] - 0s - loss: 0.1859 - acc: 0.9500 - val_loss: 0.2941 - val_acc: 0.9000\n",
       "Epoch 4/20\n",
-      "80/80 [==============================] - 0s - loss: 0.1767 - acc: 0.9750 - val_loss: 0.3241 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.1354 - acc: 0.9500 - val_loss: 0.2667 - val_acc: 0.9000\n",
       "Epoch 5/20\n",
-      "80/80 [==============================] - 0s - loss: 0.2968 - acc: 0.8375 - val_loss: 0.3047 - val_acc: 0.8500\n",
+      "80/80 [==============================] - 0s - loss: 0.0586 - acc: 0.9875 - val_loss: 0.6656 - val_acc: 0.8000\n",
       "Epoch 6/20\n",
-      "80/80 [==============================] - 0s - loss: 0.1238 - acc: 0.9375 - val_loss: 0.5958 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0422 - acc: 1.0000 - val_loss: 0.8947 - val_acc: 0.7500\n",
       "Epoch 7/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0940 - acc: 0.9625 - val_loss: 1.0830 - val_acc: 0.6500\n",
+      "80/80 [==============================] - 0s - loss: 0.0332 - acc: 1.0000 - val_loss: 0.7032 - val_acc: 0.8000\n",
       "Epoch 8/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0920 - acc: 0.9625 - val_loss: 0.6519 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0119 - acc: 1.0000 - val_loss: 0.4653 - val_acc: 0.8000\n",
       "Epoch 9/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0272 - acc: 1.0000 - val_loss: 0.3064 - val_acc: 0.9500\n",
+      "80/80 [==============================] - 0s - loss: 0.0097 - acc: 1.0000 - val_loss: 0.3496 - val_acc: 0.8500\n",
       "Epoch 10/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0320 - acc: 1.0000 - val_loss: 0.2467 - val_acc: 0.9500\n",
+      "80/80 [==============================] - 0s - loss: 0.0102 - acc: 1.0000 - val_loss: 0.3371 - val_acc: 0.8500\n",
       "Epoch 11/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0305 - acc: 1.0000 - val_loss: 0.2828 - val_acc: 0.9500\n",
+      "80/80 [==============================] - 0s - loss: 0.0074 - acc: 1.0000 - val_loss: 0.4134 - val_acc: 0.8500\n",
       "Epoch 12/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0142 - acc: 1.0000 - val_loss: 0.4455 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0046 - acc: 1.0000 - val_loss: 0.5220 - val_acc: 0.8000\n",
       "Epoch 13/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0090 - acc: 1.0000 - val_loss: 0.6415 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0032 - acc: 1.0000 - val_loss: 0.6060 - val_acc: 0.8000\n",
       "Epoch 14/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0105 - acc: 1.0000 - val_loss: 0.7554 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0031 - acc: 1.0000 - val_loss: 0.6474 - val_acc: 0.8000\n",
       "Epoch 15/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0111 - acc: 1.0000 - val_loss: 0.7538 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0030 - acc: 1.0000 - val_loss: 0.6418 - val_acc: 0.8000\n",
       "Epoch 16/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0087 - acc: 1.0000 - val_loss: 0.6686 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0026 - acc: 1.0000 - val_loss: 0.6050 - val_acc: 0.8000\n",
       "Epoch 17/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0055 - acc: 1.0000 - val_loss: 0.5759 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0021 - acc: 1.0000 - val_loss: 0.5508 - val_acc: 0.8000\n",
       "Epoch 18/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0043 - acc: 1.0000 - val_loss: 0.4932 - val_acc: 0.8000\n",
+      "80/80 [==============================] - 0s - loss: 0.0019 - acc: 1.0000 - val_loss: 0.4913 - val_acc: 0.8000\n",
       "Epoch 19/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0037 - acc: 1.0000 - val_loss: 0.4412 - val_acc: 0.8500\n",
+      "80/80 [==============================] - 0s - loss: 0.0017 - acc: 1.0000 - val_loss: 0.4517 - val_acc: 0.8500\n",
       "Epoch 20/20\n",
-      "80/80 [==============================] - 0s - loss: 0.0038 - acc: 1.0000 - val_loss: 0.4196 - val_acc: 0.8500\n"
+      "80/80 [==============================] - 0s - loss: 0.0017 - acc: 1.0000 - val_loss: 0.4304 - val_acc: 0.8500\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x11ac99a90>"
+       "<keras.callbacks.History at 0x114d3c9b0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
