--- a/python/intro_to_deep_learning/my_keras.ipynb
+++ b/python/intro_to_deep_learning/my_keras.ipynb
@@ -142,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "target = data_df.wage_per_hour.as_matrix()"
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -216,16 +218,22 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "dense_1 (Dense)                  (None, 300)           3000        dense_input_1[0][0]              \n",
+      "dense_16 (Dense)                 (None, 5000)          50000       dense_input_4[0][0]              \n",
       "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (None, 300)           90300       dense_1[0][0]                    \n",
+      "dense_17 (Dense)                 (None, 5000)          25005000    dense_16[0][0]                   \n",
       "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (None, 400)           120400      dense_2[0][0]                    \n",
+      "dense_18 (Dense)                 (None, 5000)          25005000    dense_17[0][0]                   \n",
       "____________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                  (None, 1)             401         dense_3[0][0]                    \n",
+      "dense_19 (Dense)                 (None, 5000)          25005000    dense_18[0][0]                   \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_20 (Dense)                 (None, 5000)          25005000    dense_19[0][0]                   \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_21 (Dense)                 (None, 8000)          40008000    dense_20[0][0]                   \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_22 (Dense)                 (None, 1)             8001        dense_21[0][0]                   \n",
       "====================================================================================================\n",
-      "Total params: 214,101\n",
-      "Trainable params: 214,101\n",
+      "Total params: 140,086,001\n",
+      "Trainable params: 140,086,001\n",
       "Non-trainable params: 0\n",
       "____________________________________________________________________________________________________\n"
      ]
@@ -234,16 +242,19 @@
    "source": [
     "# Specify the model\n",
     "model = Sequential()\n",
-    "model.add(Dense(300, activation='relu', input_shape=[n_cols,]))\n",
-    "model.add(Dense(300 ,activation='relu'))\n",
-    "model.add(Dense(400 ,activation='relu'))\n",
+    "model.add(Dense(5000, activation='relu', input_shape=[n_cols,]))\n",
+    "model.add(Dense(5000 ,activation='relu'))\n",
+    "model.add(Dense(5000 ,activation='relu'))\n",
+    "model.add(Dense(5000 ,activation='relu'))\n",
+    "model.add(Dense(5000 ,activation='relu'))\n",
+    "model.add(Dense(8000 ,activation='relu'))\n",
     "model.add(Dense(1))\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -252,34 +263,34 @@
      "text": [
       "Train on 427 samples, validate on 107 samples\n",
       "Epoch 1/10\n",
-      "427/427 [==============================] - 0s - loss: 30.8609 - val_loss: 28.0399\n",
+      "427/427 [==============================] - 37s - loss: 8345.3053 - val_loss: 59.3542\n",
       "Epoch 2/10\n",
-      "427/427 [==============================] - 0s - loss: 21.5197 - val_loss: 30.3090\n",
+      "427/427 [==============================] - 35s - loss: 23.4694 - val_loss: 45.5492\n",
       "Epoch 3/10\n",
-      "427/427 [==============================] - 0s - loss: 19.8690 - val_loss: 28.0166\n",
+      "427/427 [==============================] - 34s - loss: 26.2934 - val_loss: 37.3138\n",
       "Epoch 4/10\n",
-      "427/427 [==============================] - 0s - loss: 19.5151 - val_loss: 33.3135\n",
+      "427/427 [==============================] - 36s - loss: 22.7258 - val_loss: 47.4522\n",
       "Epoch 5/10\n",
-      "427/427 [==============================] - 0s - loss: 18.9372 - val_loss: 32.7109\n",
+      "427/427 [==============================] - 34s - loss: 21.1507 - val_loss: 29.1450\n",
       "Epoch 6/10\n",
-      "427/427 [==============================] - 0s - loss: 18.8006 - val_loss: 30.1739\n",
+      "427/427 [==============================] - 34s - loss: 23.2184 - val_loss: 33.9905\n",
       "Epoch 7/10\n",
-      "427/427 [==============================] - 0s - loss: 19.2569 - val_loss: 31.7386\n",
+      "427/427 [==============================] - 34s - loss: 30.4330 - val_loss: 49.3886\n",
       "Epoch 8/10\n",
-      "427/427 [==============================] - 0s - loss: 18.7565 - val_loss: 30.1355\n",
+      "427/427 [==============================] - 34s - loss: 20.3621 - val_loss: 27.2985\n",
       "Epoch 9/10\n",
-      "427/427 [==============================] - 0s - loss: 18.3256 - val_loss: 28.1534\n",
+      "427/427 [==============================] - 34s - loss: 19.3887 - val_loss: 36.5776\n",
       "Epoch 10/10\n",
-      "427/427 [==============================] - 0s - loss: 18.4406 - val_loss: 28.9818\n"
+      "427/427 [==============================] - 34s - loss: 19.5292 - val_loss: 32.2031\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x10f4f1a90>"
+       "<keras.callbacks.History at 0x115e4c470>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
